--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/uber?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password= #@incorrect
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+server.port=9999
